infrastructure/controllers/kubevirt/manager-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/server-snippets: |
      location / {
      proxy_set_header Upgrade $http_upgrade;
      proxy_http_version 1.1;
      proxy_set_header X-Forwarded-Host $http_host;
      proxy_set_header X-Forwarded-Proto $scheme;
      proxy_set_header X-Forwarded-For $remote_addr;
      proxy_set_header Host $host;
      proxy_set_header Connection "upgrade";
      proxy_cache_bypass $http_upgrade;
      }
  name: kubevirt-manager
  namespace: kubevirt-manager
spec:
  ingressClassName: nginx
  rules:
    - host: "kubevirt.sharing.io"
      http:
        paths:
          - backend:
              service:
                name: kubevirt-manager
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - secretName: wildcard-tls
      hosts:
        - "kubevirt.sharing.io"
